--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -883,6 +883,102 @@
         "supportServices": 20292212,
         "beneficiaryAdvocacy": 17892353
       }
+    },
+    {
+      "year": 10,
+      "owner": "accountant@spirebooks.com",
+      "green": true,
+      "Revenue": {
+      },
+      "Expenses": {
+        "personnel": 14758898,
+        "PersonnelFringeAdmin": {
+          "FringeBenefits": {
+          }
+        },
+        "PersonnelFringeAdminStaff": {
+          "FringeBenefits": {
+          }
+        },
+        "FringeAdminManagement": {
+          "FringeBenefits": {
+          }
+        }
+      },
+      "ExpenditurePerAudited": {
+      }
+    },
+    {
+      "year": 11,
+      "owner": "accountant@spirebooks.com",
+      "green": true,
+      "Revenue": {
+      },
+      "Expenses": {
+        "personnel": 14758898,
+        "PersonnelFringeAdmin": {
+          "FringeBenefits": {
+          }
+        },
+        "PersonnelFringeAdminStaff": {
+          "FringeBenefits": {
+          }
+        },
+        "FringeAdminManagement": {
+          "FringeBenefits": {
+          }
+        }
+      },
+      "ExpenditurePerAudited": {
+      }
+    },
+    {
+      "year": 12,
+      "owner": "accountant@spirebooks.com",
+      "green": true,
+      "Revenue": {
+      },
+      "Expenses": {
+        "personnel": 14758898,
+        "PersonnelFringeAdmin": {
+          "FringeBenefits": {
+          }
+        },
+        "PersonnelFringeAdminStaff": {
+          "FringeBenefits": {
+          }
+        },
+        "FringeAdminManagement": {
+          "FringeBenefits": {
+          }
+        }
+      },
+      "ExpenditurePerAudited": {
+      }
+    },
+    {
+      "year": 13,
+      "owner": "accountant@spirebooks.com",
+      "green": true,
+      "Revenue": {
+      },
+      "Expenses": {
+        "personnel": 14758898,
+        "PersonnelFringeAdmin": {
+          "FringeBenefits": {
+          }
+        },
+        "PersonnelFringeAdminStaff": {
+          "FringeBenefits": {
+          }
+        },
+        "FringeAdminManagement": {
+          "FringeBenefits": {
+          }
+        }
+      },
+      "ExpenditurePerAudited": {
+      }
     }
   ],
   "defaultAFS": [
